@@ -4,6 +4,7 @@ llvm-toolchain-8 (1:8.0.1~+rc1-1~exp2) experimental; urgency=medium
     Option -DLLVM_ENABLE_LTO="Thin" added
   * WebAssembly is now build by default, remove it from the
     experimental list
+  * check-polly was executed twice
 
  --
 
